Primeiro passo para reprocessar o IOF
